; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/bios/extr_smapi.c_smapi_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/bios/extr_smapi.c_smapi_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i32 }
%struct.thread = type { i32 }
%struct.smapi_softc = type { i32, i32 }
%struct.smapi_bios_parameter = type { i32 }

@smapi_devclass = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@smapi32_offset = common dso_local global i32 0, align 4
@ENOTTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, i32, i64, i32, %struct.thread*)* @smapi_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smapi_ioctl(%struct.cdev* %0, i32 %1, i64 %2, i32 %3, %struct.thread* %4) #0 {
  %6 = alloca %struct.cdev*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.thread*, align 8
  %11 = alloca %struct.smapi_softc*, align 8
  %12 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.thread* %4, %struct.thread** %10, align 8
  store i32 0, i32* %12, align 4
  %13 = load i32, i32* @smapi_devclass, align 4
  %14 = load %struct.cdev*, %struct.cdev** %6, align 8
  %15 = call i32 @dev2unit(%struct.cdev* %14)
  %16 = call %struct.smapi_softc* @devclass_get_softc(i32 %13, i32 %15)
  store %struct.smapi_softc* %16, %struct.smapi_softc** %11, align 8
  %17 = load %struct.smapi_softc*, %struct.smapi_softc** %11, align 8
  %18 = icmp eq %struct.smapi_softc* %17, null
  br i1 %18, label %19, label %21

19:                                               ; preds = %5
  %20 = load i32, i32* @ENXIO, align 4
  store i32 %20, i32* %12, align 4
  br label %42

21:                                               ; preds = %5
  %22 = load i32, i32* %7, align 4
  switch i32 %22, label %39 [
    i32 128, label %23
    i32 129, label %30
  ]

23:                                               ; preds = %21
  %24 = load %struct.smapi_softc*, %struct.smapi_softc** %11, align 8
  %25 = getelementptr inbounds %struct.smapi_softc, %struct.smapi_softc* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = sext i32 %26 to i64
  %28 = load i64, i64* %8, align 8
  %29 = call i32 @bcopy(i64 %27, i64 %28, i32 4)
  store i32 0, i32* %12, align 4
  br label %41

30:                                               ; preds = %21
  %31 = load %struct.smapi_softc*, %struct.smapi_softc** %11, align 8
  %32 = getelementptr inbounds %struct.smapi_softc, %struct.smapi_softc* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* @smapi32_offset, align 4
  %34 = load i64, i64* %8, align 8
  %35 = inttoptr i64 %34 to %struct.smapi_bios_parameter*
  %36 = load i64, i64* %8, align 8
  %37 = inttoptr i64 %36 to %struct.smapi_bios_parameter*
  %38 = call i32 @smapi32(%struct.smapi_bios_parameter* %35, %struct.smapi_bios_parameter* %37)
  store i32 %38, i32* %12, align 4
  br label %41

39:                                               ; preds = %21
  %40 = load i32, i32* @ENOTTY, align 4
  store i32 %40, i32* %12, align 4
  br label %41

41:                                               ; preds = %39, %30, %23
  br label %42

42:                                               ; preds = %41, %19
  %43 = load i32, i32* %12, align 4
  ret i32 %43
}

declare dso_local %struct.smapi_softc* @devclass_get_softc(i32, i32) #1

declare dso_local i32 @dev2unit(%struct.cdev*) #1

declare dso_local i32 @bcopy(i64, i64, i32) #1

declare dso_local i32 @smapi32(%struct.smapi_bios_parameter*, %struct.smapi_bios_parameter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
